infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
        - name: frontend
          image: frontend/services:0.0.1
  
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec: 
  selector: 
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
