infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec: 
      containers:
        - name: comment
          image: comment/services:0.0.1
  
---
apiVersion: v1
kind: Service
metadata:
  name: comment
spec: 
  selector: 
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4001
      targetPort: 4001
