infra/k8s/event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: event
  template: 
    metadata: 
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: eventbus/services:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: event
spec: 
  selector: 
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 4005
      targetPort: 4005
