infra/k8s/ingresssrv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http: 
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts
                port: 
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend: 
              service: 
                name: query
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comment
                port: 
                  number: 4001
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: frontend
                port:
                  number: 3000
